# smart_home_automation

./: LICENSE  README.md
components/led/lightbulb_driver/: README.md
components/mqtt/: mqttm.c
components/wifi_manager/: CMakeLists.txt  Kconfig  component.mk
components/wifi_manager/include/: wifim.h
components/wifi_manager/src/: wifim.c
environment_monitoring/main/: dht_monitoring.c
smart_lighting/: sl_ldr.c  smart_lighting.c
